fix: list first 'limit' WAL objects of given stream
Signed-off-by: Li Zhanhui <lizhanhui@gmail.com>